2012-7-01   Trevor Hastie <hastie@stanford.edu> 

	Major new release
	* added mgaussian family for multivariate response
	* added grouped option for multinomial family
	
2012-4-26   Trevor Hastie <hastie@stanford.edu>
	* nasty bug fixed in fortran - removed reference to dble
	* check class of newx and make dgCmatrix if sparse
2011-8-15   Trevor Hastie <hastie@stanford.edu>
	* lognet added a classnames component to the object
	* predict.lognet(type="class") now returns a character vector/matrix
2011-6-23   Trevor Hastie <hastie@stanford.edu>
	* predict.glmnet : fixed bug with type="nonzero" 
	* glmnet: Now x can inherit from "sparseMatrix" rather than the very specific "dgCMatrix", and this will
	   trigger sparse mode for glmnet
	

2010-11-01  Trevor Hastie  <hastie@stanford.edu>

	* glmnet.Rd (lambda.min) : changed value to 0.01 if nobs<nvars
	  (lambda) added warnings to avoid single value
	  (lambda.min): renamed it lamda.min.ratio
	* glmnet (lambda.min) : changed	value to 0.01 if nobs<nvars
	    (HessianExact) : changed the sense (it was wrong)
	   (lambda.min): renamed it lamda.min.ratio # this allows it to be called lambda.min in a call though
	* predict.cv.glmnet (new function) : makes predictions directly from the saved glmnet object on the cv object
	* coef.cv.glmnet (new function) : as above
	* predict.cv.glmnet.Rd : help functions for the above
	* cv.glmnet : insert drop(y) to avoid 1 column matrices
	    now include a glmnet.fit object for later predictions
	* nonzeroCoef : added a special case for a single variable in x; it was dying on this
	* deviance.glmnet : included
	* deviance.glmnet.Rd : included
	

2010-06-26 Trevor Hastie <hastie@stanford.edu>
	###	Note that this starts from glmnet_1.4
	