@@ -1,10 +1,10 @@
-9f82a342248a6d01b89f330db9572699 *ChangeLog
-c82db1cb48ac3ca4120ab9b27dfc59ff *DESCRIPTION
+9a6a75675f8344b4875710779a5f224c *ChangeLog
+b7f59e5bf64d6aaaf05ddd6273c27089 *DESCRIPTION
 0c4c526996350bcdc77740836cb1ba10 *NAMESPACE
 dfe9c97d146f93a159830f9cf0c8cf34 *R/auc.R
 8cd96999dce298c1d81ce51ea2f6d2a3 *R/auc.mat.R
 e7e655e803c97c24570ebd8c02ba0cac *R/coef.cv.glmnet.R
-110e5567221682f1b2c196e70dd9b2ed *R/coef.glmnet.R
+b419c29f219719fce39fdf6f3ec894f8 *R/coef.glmnet.R
 ab05dba77ad585b2ac3a465c26fc2b00 *R/coefnorm.R
 32a31740acc7b5a10fd005d8c137fa8d *R/coxnet.R
 2ccec532ed801467c3b8bd11cc7dd66f *R/coxnet.deviance.R
@@ -42,14 +42,14 @@ cd90d1f98f6ecfc775bab8da01426724 *R/plot.cv.glmnet.R
 c98385ade8c0a01e1fa668bd2031cb52 *R/plot.mrelnet.R
 6178cc23ed168be78844a2f39b265f35 *R/plot.multnet.R
 4ba66555cf398aef9197ce755bbb0f89 *R/plotCoef.R
-6cc2bb31487623d4361f21e1aa35a038 *R/predict.coxnet.R
+0f65445adb439982b878a14ea5c51f36 *R/predict.coxnet.R
 4b2aa41adb3d2df3293901edb52e5942 *R/predict.cv.glmnet.R
-fdbb5238d31170d3202a5a5a05082333 *R/predict.elnet.R
-a1c5bac0c55e8beb4864512be8182f44 *R/predict.fishnet.R
-a3faae5ba6bf73246ece248c481273f8 *R/predict.glmnet.R
-fd8ba89c0f163a2c3a02d6ca7217a9ce *R/predict.lognet.R
-2ca3a413481aaa446ae3d2db76d653d8 *R/predict.mrelnet.R
-d5de9ed7f53b75d7d352045d42163eaa *R/predict.multnet.R
+9d94cbb290468b9e357ab1f67fe65831 *R/predict.elnet.R
+f794a6242fe4cb70c3334e30f61a7688 *R/predict.fishnet.R
+bd02d75c693886eb94a7f4e21da65761 *R/predict.glmnet.R
+f714df69858c8be76c72bab054cb72bb *R/predict.lognet.R
+ad0ca203157a930229fcf370db2fbba1 *R/predict.mrelnet.R
+cd892aec0c7554f84950d50cd46b7b90 *R/predict.multnet.R
 ea696d8bc26ce7a5900ec3e52cad8ccb *R/print.glmnet.R
 029f53c8146a7f2e945540ca698e429d *R/response.coxnet.R
 8b945ab1cb9a14d10fed2265eb839876 *R/rmult.R
@@ -59,7 +59,7 @@ ea696d8bc26ce7a5900ec3e52cad8ccb *R/print.glmnet.R
 2a28ed036c3463658abaae762885bf8d *configure.in
 98e8e7b7969f1b5912595e08838d5162 *configure.win
 c22d19c217bc163a2c38b84add608c31 *inst/CITATION
-88fc9b86a341e21fbcecc7816380a122 *inst/doc/Coxnet.pdf
+057f805c3c255a87c970a9afb374f21d *inst/doc/Coxnet.pdf
 89bb275bc27d5cebcf61d4f0517fb5d5 *inst/doc/Coxnet.rnw
 97b9b7bbcc81a327419ecf2013ba0eb9 *inst/mortran/newmultGLMnet.m
 e22d800739622fa60c7e6b275c54c8bf *man/cv.glmnet.Rd
@@ -70,7 +70,7 @@ e96fa1de408ee21fc9f67d30dae7ee67 *man/glmnet-internal.Rd
 3d1ae1e0e398b3e853a267f2a33e1823 *man/plot.cv.glmnet.Rd
 5de6c76ddeec5b531e92e3326268e02c *man/plot.glmnet.Rd
 e9693412aa7d68b0bdb6acf269b24376 *man/predict.cv.glmnet.Rd
-84e1e994638bbc5c0049218ec1045eae *man/predict.glmnet.Rd
+508d00377006dc3f04e1905fb8cfbdd4 *man/predict.glmnet.Rd
 ec4cf2278b0e3cace7980b6d05506f53 *man/print.glmnet.Rd
 03d5d624b734ace367b45b789fbf66a4 *src/Makevars.in
 1bd30ec98a50c49ec6aabebbb458d0cb *src/Makevars.win
