@@ -1,2 +1,2 @@
-coef.glmnet=function(object,s=NULL,exact=TRUE,...)
+coef.glmnet=function(object,s=NULL,exact=FALSE,...)
   predict(object,s=s,type="coefficients",exact=exact)
