@@ -1,3 +1,3 @@
-predict.elnet=function(object,newx,s=NULL,type=c("link","response","coefficients","nonzero"),exact=TRUE,offset,...){
+predict.elnet=function(object,newx,s=NULL,type=c("link","response","coefficients","nonzero"),exact=FALSE,offset,...){
 NextMethod("predict")
  } 
